# tdgzi

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.txt
src/: db.rs  installer.rs  main.rs  rules.rs  scan.rs  uninstall.rs
