[package]
name = "tdgzi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
flate2 = "1.1.9"
tar = "0.4.45"
clap = { version = "4.6.0", features = ["derive"] }
tempfile = "3.27.0"
walkdir = "2.5.0"
indicatif = "0.18.4"
console = "0.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"